Make sure to wrap a buffered stream around the stream we're passed before sending it to the parser (which expects a buffered stream).  Bug 287409, r=darin, sr=jst